--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<h1>Hello, World!</h1>
 		<p>A new tag</p>
 		<strong>A bold statement</strong>
+		<p>So much text</p>
 		<img src='unicorn.jpg' width='600'>
 	</body>
 </html>
